log
Sun, Sep 14, 2025  9:42:31 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|6
total_score: 0/70
eeef3b7
Sun, Sep 14, 2025  9:44:32 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
762a95f
Sun, Sep 14, 2025  9:47:39 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0114001
Sun, Sep 14, 2025  9:50:10 PM: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
f145fa5
Sun, Sep 14, 2025  9:58:47 PM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7bfd070
Sun, Sep 14, 2025 10:00:50 PM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:54:8: error: statement with no effect [-Werror=unused-value]
     map->buckets;
     ~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
9494d1b
Sun, Sep 14, 2025 10:01:37 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:54:20: error: too few arguments to function 'createPair'
     map->buckets = createPair(key);
                    ^~~~~~~~~~
hashmap.c:19:8: note: declared here
 Pair * createPair( char * key,  void * value) {
        ^~~~~~~~~~
e8dd2b2
Sun, Sep 14, 2025 10:01:53 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:54:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = createPair(key, value);
                  ^
cc1.exe: all warnings being treated as errors
a18d7e1
Sun, Sep 14, 2025 10:02:11 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
9cf8b7a
Sun, Sep 14, 2025 10:03:07 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
797f2c4
Sun, Sep 14, 2025 10:05:10 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
964289e
Sun, Sep 14, 2025 10:05:37 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
0a7e7af
Sun, Sep 14, 2025 10:09:05 PM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 30/70
e2f4435
Sun, Sep 14, 2025 10:09:22 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9f39cfc
Sun, Sep 14, 2025 10:24:52 PM: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:108:23: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
             return map->buckets;
                    ~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
c654e07
Sun, Sep 14, 2025 10:25:17 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b8eb52d
Sun, Sep 14, 2025 10:25:58 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0b45fb1
Sun, Sep 14, 2025 10:26:39 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b8fa10b
Sun, Sep 14, 2025 10:30:03 PM: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:97:5: error: expected ',' or ';' before 'if'
     if(pair != NULL)
     ^~
hashmap.c:96:11: error: unused variable 'pair' [-Werror=unused-variable]
     Pair *pair = searchMap(map, key)
           ^~~~
cc1.exe: all warnings being treated as errors
baaf459
Sun, Sep 14, 2025 10:30:16 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b37ac0
Sun, Sep 14, 2025 10:30:42 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6c0d84c
Sun, Sep 14, 2025 10:34:47 PM: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  11|2
total_score: 50/70
23fa5e3
Sun, Sep 14, 2025 10:39:06 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:129:25: error: 'pos' undeclared (first use in this function)
         if(map->buckets[pos] != NULL && map->buckets[pos]->key != NULL)
                         ^~~
hashmap.c:129:25: note: each undeclared identifier is reported only once for each function it appears in
7b74287
Sun, Sep 14, 2025 10:39:24 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
a626a5f
Sun, Sep 14, 2025 10:41:35 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  13|2
total_score: 50/70
0266b48
Sun, Sep 14, 2025 10:49:16 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
5d3bdfb
Sun, Sep 14, 2025 10:55:23 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:65:10: error: unused variable 'capacidadAnterior' [-Werror=unused-variable]
     long capacidadAnterior = map->capacity;
          ^~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
8757979
Sun, Sep 14, 2025 10:58:16 PM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:66:13: error: unused variable 'bucketsAnterior' [-Werror=unused-variable]
     Pair ** bucketsAnterior = map->buckets;
             ^~~~~~~~~~~~~~~
hashmap.c:65:10: error: unused variable 'capacidadAnterior' [-Werror=unused-variable]
     long capacidadAnterior = map->capacity;
          ^~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
7abb373
Sun, Sep 14, 2025 11:01:07 PM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
5ea3c5a
Sun, Sep 14, 2025 11:02:34 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
09c177b
Sun, Sep 14, 2025 11:20:24 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:8: error: 'HashMap {aka struct HashMap}' has no member named 'capaticy'; did you mean 'capacity'?
     map->capaticy += 2;
        ^~
2408ad6
Sun, Sep 14, 2025 11:20:36 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:8: error: 'HashMap {aka struct HashMap}' has no member named 'capaticy'; did you mean 'capacity'?
     map->capaticy += 2;
        ^~
014e672
